fixed font size on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@
       min-width: 320px;
       width: 100%;
       margin: 0;
-      margin-top: 10vh;
+      margin-top: 2vh;
   }
   .slider {
     width: 80%;
@@ -106,5 +106,13 @@
   }
   .flip, .play {
     width: 50px !important;
+  }
+  #slide {
+    font-size: 1.5em;
+    width: 95vw;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
